--- a/schoolservice.properties
+++ b/schoolservice.properties
@@ -5,6 +5,6 @@ server.port=1234
 
 
 
-server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3392
-server.ribbon.eureka.enabled=false
+#server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3392
+#server.ribbon.eureka.enabled=false
 
