--- a/schoolservice.properties
+++ b/schoolservice.properties
@@ -1,10 +1,13 @@
 spring.application.name=schoolservice
 eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka
+eureka.client.healthcheck.enabled= true
+eureka.instance.leaseRenewalIntervalInSeconds= 1
+eureka.instance.leaseExpirationDurationInSeconds= 2
 
 server.port=1234
 
-
-
-server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3392
 server.ribbon.eureka.enabled=true
+server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3393
+server.ribbon.ServerListRefreshInterval=1000
+
 
