--- a/schoolservice.properties
+++ b/schoolservice.properties
@@ -6,8 +6,8 @@ eureka.instance.leaseExpirationDurationInSeconds= 2
 
 server.port=1234
 
-server.ribbon.eureka.enabled=false
-server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3393
+server.ribbon.eureka.enabled=true
+#server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3393
 server.ribbon.ServerListRefreshInterval=1000
 
 
