--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -10,6 +10,7 @@ spring.datasource.password=root1234
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: false
 #spring.jpa.format-sql: true
-spring.jpa.generate-ddl: false
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 ##boot specific
