--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql: false
 #spring.jpa.format-sql: true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+feign.hystrix.enabled=false
