--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -1,5 +1,7 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka
 
+server.port=1166
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:4404/valoya4
 spring.datasource.username=root
