--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -12,4 +12,7 @@ spring.jpa.show-sql: false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-feign.hystrix.enabled=false
+feign.hystrix.enabled=true
+
+
+
