--- a/schoolservice.properties
+++ b/schoolservice.properties
@@ -10,4 +10,9 @@ server.ribbon.eureka.enabled=true
 #server.ribbon.listOfServers=localhost:3391,localhost:3392,localhost:3393
 server.ribbon.ServerListRefreshInterval=1000
 
+feign.hystrix.enabled=true
+
+
+
+
 
