--- a/teacherservice.properties
+++ b/teacherservice.properties
@@ -4,7 +4,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka
 server.port=1167
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:4404/valoya5
+spring.datasource.url=jdbc:mysql://localhost:4404/valoya4ss
 spring.datasource.username=root
 spring.datasource.password=root1234
 
