--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -12,5 +12,7 @@ spring.jpa.show-sql: false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+management.security.enabled = false
+
 
 
