--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -13,6 +13,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 management.security.enabled = false
+management.port=8081
 
 
 
