--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -11,6 +11,9 @@ spring.jpa.show-sql: false
 #spring.jpa.format-sql: true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+endpoints.sensitive=true
+endpoints.actuator.enabled=true
+endpoints.logfile.enabled=true
 
 management.security.enabled = false
 
