--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -17,5 +17,8 @@ endpoints.logfile.enabled=true
 
 management.security.enabled = false
 
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
+
 
 
