admin actuator property url

--- a/galleryservice.properties
+++ b/galleryservice.properties
@@ -19,6 +19,7 @@ management.security.enabled = false
 
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=*
+spring.boot.admin.url=http://localhost:1119
 
 
 
