--- a/loginservice.yml
+++ b/loginservice.yml
@@ -27,7 +27,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/valoya4
     username: root
-    password: root1234
+    password: root
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
